--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 Регулярное выражение:
 <input type="text" style="width: 600px" [(ngModel)]="chain">
 <p></p>
-<button (click)="setChains()">Получить цепочки по РВ</button>
+<button (click)="setChains()">Построить выражение</button>
 <p></p>
 <!--<p>{{ chain }}</p>-->
 Цепочки:
